configure for polygon

--- a/styles/Home-new.scss
+++ b/styles/Home-new.scss
@@ -82,23 +82,19 @@
 
   .icon-box {
     animation: fadeIn 0.5s 1.5s backwards ease-out;
-    width: 250px;
     justify-content: space-evenly;
-      @media screen and (max-width: 768px) {
-        width: 150px;
-      }
-  
+
     .icon {
-      height: 48px;
-      width: 48px;
       svg {
+        height: 48px;
+        width: 48px;
         @media screen and (max-width: 768px) {
           height: 24px;
+          width: 24px
         }
       }
       img {
         height: 24px;
-        padding: 0 12px;
         @media screen and (max-width: 768px) {
           height: 24px;
         }
@@ -144,20 +140,10 @@
   
   
     .hero-media {
-      position: relative;
-      height: 300px;
-      width: 300px;
-  
-      @media screen and (max-width: 768px) {
-        height: 200px;
-        width: 200px;
-  
-      }
-      .hero-gif {
-        
-        border-radius: 8px;
-        z-index: 2;
 
+      .hero-gif {
+        border-radius: 4px;
+        z-index: 2;
         animation: emerge 1.5s forwards;
       }
     }
